2003-05-19  Bernhard Held <bernhard@bernhardheld.de>

	Applied patch from bug 737905 (renamed yylineo to mylineno):
	* src/altlex.c
	* src/SDCCast.c
	* src/SDCglobl.h
	* src/SDCC.lex
	* src/SDCCsymt.c
	* src/SDCCval.c	

2003-05-19  Scott Dattalo  <scott@dattalo.com>

	* src/pic16/pcode.c: Cleaned warnings
	* src/pic16/pcodepeep.c: Cleaned warnings
	* src/pic16/ralloc.c: Cleaned warnings

2003-05-19  Bernhard Held <bernhard@bernhardheld.de>

	* doc/sdccman.lyx: fixed bug 739745
	* src/pic16/pcode.c (pic16_get_op): fixed warning on alpha

2003-05-18  Bernhard Held <bernhard@bernhardheld.de>

	* src/port.h: removed DEFAULT_PORT, it's not yet pic16 ;-)
	it can be defined with CFLAGS when running configure
	* src/SDCCmain.c: fixed compiling + linking with object files

2003-05-18  Vangelis Rokas (vrokas@otenet.gr)

	* configure.in: configure for pic16 port,
	    added --disable-pic16-port
	* sdccconf_in.h: added macro OPT_DISABLE_PIC16
	* src/SDCCmain.c: linkOptions is changed to set *,
	    added if/endif conditional macros to remove options help
	    messages from optionsTable when a port is not configured, added
	    support for the PIc16 port in the ports table, when executing
	    the compiler with no port specified on command line, a default
	    port is selected with the new macro DEFAULT_PORT which is
	    defined in port.h, in setDefaultOptions() linkOptions is removed
	    from initialization assignment, since now it is a set,
	    parseCmdLine uses setParseWithComma for linkOptions, in
	    linkEdit() linkOptions are accessed with new function indexSet()
	    which returns the i'th item of a set variable. See SDCCset.c, in
	    linkEdit() when calling buildCmdLine(), added linkOptions as
	    last argument. Now users can pass arguments to gplink via the
	    -Wl option, main() uses pic16glue() to glue up pic16 programs
	* src/SDCCpeeph.c: various changes to support pic16
	* src/SDCCset.c: added function  void *indexSet(set *, int)  to